# vidya

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  docker-compose.yml  load_service.sh  pyproject.toml  requirements.frozen  run.py  run_debug.py  tox.ini  vidya.service  vidya_celery.service  wsgi.py
admin/: .admin-config.yaml  admin-commands.sh  admin-functions.sh
vidya/: __init__.py  app.py  celery_init.py  celery_tasks.py  config.py  log_init.py
vidya/core/: camera.py  motion_detect.py  notify.py
vidya/routes/: camera.py  helpers.py  main.py
